# irc-log

./: .gitignore  README.md  build.sh  irc-log.cabal  stack-ghcjs.yaml  stack.yaml
app/: Main.hs
app/api/: Main.hs
app/bot/: Main.hs
app/log/: Main.hs
backend/: irc-log.cabal  stack.yaml
backend/app/api/: Main.hs
backend/app/bot/: Main.hs
backend/db/: log.sql
backend/test/: Spec.hs
elm/: elm-package.json
elm/output/: index.html  style.css
elm/src/: Main.elm
frontend/: ChangeLog.md  LICENSE  build.sh  irc-dom.cabal  stack-ghcjs.yaml  stack.yaml  style.css
frontend/elm/output/: elm.js
frontend/elm/src/: Dates.elm  Styles.elm
frontend/output/: index.html  style.css
frontend/src/: Main.hs  Types.hs
lib/: irc-lib.cabal  stack.yaml
lib/src/: DB.hs  Lib.hs
src/: IrcApi.hs  IrcLog.hs  Lib.hs
