name:                irc-log
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/irc-log#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , IrcLog
                     , IrcApi
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , mtl
                     , network
                     , postgresql-simple
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable irc-log-exe
  hs-source-dirs:      app/log/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , irc-log
  default-language:    Haskell2010

executable irc-api-exe
  hs-source-dirs:      app/api/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , irc-log
  default-language:    Haskell2010

test-suite irc-log-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , irc-log
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/irc-log
