name:                irc-log
version:             0.1.0.0
synopsis:            Irc-log and utils
description:         Please see README.md
homepage:            http://github.com/Arguggi/irc-log
license:             GPL-3
license-file:        LICENSE.md
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2015 Arguggi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable irc-bot
  hs-source-dirs:      app/bot/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , irc-lib
                     , mtl
                     , network
                     , opaleye
                     , postgresql-simple
                     , text
                     , time
  default-language:    Haskell2010

executable irc-api
  hs-source-dirs:      app/api/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , irc-lib
                     , http-api-data
                     , opaleye
                     , postgresql-simple
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

Test-Suite test-irc-log
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , quickcheck-instances
                     , irc-lib
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Arguggi/irc-log
