name:                irc-dom
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable irc-dom
  main-is:             Main.hs
  other-modules:       Types
  build-depends:       base >=4.9 && <4.10
                     , data-default
                     , file-embed
                     , irc-lib
                     , lens
                     , lucid
                     , reflex
                     , reflex-dom
                     , time
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  if impl(ghcjs)
      ghc-options:    -dedupe
  else
      ghc-options:    -Wall
