name:                irc-lib
version:             0.1.0.0
synopsis:            Irc-lib
description:         Please see README.md
homepage:            http://github.com/Arguggi/irc-log
license:             GPL-3
license-file:        LICENSE.md
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2015 Arguggi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag using-ghc
  Description: Are we compiling with ghc
  Default: True

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , product-profunctors
                     , text
                     , time
  if flag(using-ghc)
    build-depends:     opaleye
    exposed-modules:   DB

  default-language:    Haskell2010
